--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Carré</h1>
+    <form action="">
+        <input type="text" value="" placeholder="nom"/>
+    </form>
 </body>
 </html>
